# duckbot

./: .gitignore  CommandProcessor.py  CommandResponse.py  Config.py  DuckBot.py  LICENSE  MANIFEST.in  Main.py  MatrixClient.py  MatrixClientPgStorage.py  PgStorage.py  PostgresDb.py  README.md  TranslationModule.py  TranslatorModule.py  config.yaml  example-config.yaml  packages.txt  pyproject.toml  registration.yaml  requirements.txt  test.py
bare-test/: matrix_client.py
duckbot-matrix/: DuckBot.py  MatrixClient.py  __main__.py
duckbot_matrix/: __main__.py  command_processor.py  command_response.py  duckbot.py  help_text.md  help_text_formatted.txt  matrix_client.py  translation_module.py
