[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duckbot-matrix"
version = "0.2.1"
authors = [
    { name = "Hannes Nisula", email = "hannes@ducksquad.dev" }
]
description = "A simple Matrix bot."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "asyncio",
    "psycopg2",
    "uuid",
    "aiohttp",
    "deepl",
    "pyyaml"
]
